[package]
name = "weson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
rodio = "0.17.1"
ratatui = { version = "0.21.0", features = ["all-widgets"]}
dirs-next = "2.0.0"
symphonia = { version = "0.5.2", features = ["all"] }