[package]
name = "weson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
pretty_env_logger = "0.5.0"
crossterm = "0.26.1"
ratatui = { version = "0.21.0", features = ["all-widgets"]}
dirs-next = "2.0.0"
symphonia = { version = "0.5.3", features = ["all"] }
rb = "0.4.1"
rubato = "0.14.1"
arrayvec = "0.7.1"
cpal = { git = "https://github.com/mizuki0629/cpal", branch = "master", features = ["asio"] }

