[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
rodio = "0.17.1"
log = { version = "0.4.14", features = ["std"] }
tokio = { version = "1.29.1", features = ["full"] }
