[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database"}
audio = { path = "../audio"}
crossterm = "0.26.1"
ratatui = { version = "0.21.0", features = ["all-widgets"]}
dirs-next = "2.0.0"
symphonia = { version = "0.5.2", features = ["all"] }
log = { version = "0.4.14", features = ["std"] }
flexi_logger = { version = "0.25.5", features = ["default", "async"] }
anyhow = "1.0.71"
tokio = { version = "1.29.1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }